@@ -1,3 +1,0 @@
-#include <jni.h>
-extern void Java_SwarmEnvironment_initSwarm(JNIEnv *env, jobject obj, jobjectArray args);
-
